--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_API=https://devserver.apnathali.com
+REACT_APP_APE=https://server.apnathali.com
 REACT_APP_IMG=https://thalibucket.s3.ap-south-1.amazonaws.com
