--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/cache": "11.9.3",
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "@firebase/messaging": "^0.12.5",
     "@mui/icons-material": "5.8.4",
     "@mui/material": "^5.8.6",
     "@mui/styled-engine": "5.8.0",
@@ -24,7 +25,9 @@
     "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "eslint-config-prettier": "^8.8.0",
+    "firebase": "^10.7.2",
     "html-to-draftjs": "^1.5.0",
+    "immutable": "^3.8.2",
     "moment": "^2.29.4",
     "prop-types": "15.8.1",
     "react": "18.2.0",
