--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-flatpickr": "3.10.13",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^8.1.1",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
